--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <title>Document</title>
 </head>
 <body>
-  {for(a in b)}
+  {for(item in list)}
+    <h1>{ item }</h1>
+    {if(show)}
+      <h2>{ haha + item }</h2>
+    {if}
   {for}
-  {for(b in c)}
-  {for}
+  {if(true)}
+  {if}
 </body>
 </html>
